--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-  "name": "server",
+  "name": "cuoraNeoWeb",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "des": "nodemon --exec node server/server.js",
-    "start": "node server/server.js"
+    "build": "babel server --out-dir build",
+    "dev": "nodemon --exec babel-node server/server.js",
+    "start": "node build/server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Bruno",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.5",
-    "morgan": "^1.10.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "helmet": "^5.1.0",
     "http": "0.0.1-security",
-    "nodemon": "^2.0.15",
+    "morgan": "^1.10.0",
     "pg": "^8.7.1",
     "puppeteer": "^13.5.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.18.6",
+    "@babel/core": "^7.18.6",
+    "@babel/node": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "nodemon": "^2.0.18"
   }
 }
