--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cuoraNeoWeb",
+  "name": "cuora-neo-web",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "helmet": "^5.1.0",
     "http": "0.0.1-security",
+    "i18n": "^0.15.0",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
     "puppeteer": "^13.5.1"
