--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "cuora-neo-web",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "build": "babel server --out-dir build",
-    "dev": "nodemon --exec babel-node server/server.js",
-    "start": "node build/server.js"
-  },
+    "dev": "cross-env NODE_ENV=development nodemon --exec babel-node -- server/server.js",
+    "start": "cross-env NODE_ENV=production nodemon --exec babel-node -- server/server.js"
+},
   "keywords": [],
   "author": "Bruno",
   "license": "ISC",
@@ -31,6 +30,7 @@
     "@babel/core": "^7.18.6",
     "@babel/node": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
+    "cross-env": "^7.0.3",
     "nodemon": "^2.0.18"
   }
 }
