--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "cuora-neo-web",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --exec babel-node -- server/server.js",
     "start": "cross-env NODE_ENV=production nodemon --exec babel-node -- server/server.js"
-},
+  },
   "keywords": [],
   "author": "Bruno",
   "license": "ISC",
@@ -32,5 +31,14 @@
     "@babel/preset-env": "^7.18.6",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.18"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BrunoAggazzani/CuoraNeoWeb.git"
+  },
+  "bugs": {
+    "url": "https://github.com/BrunoAggazzani/CuoraNeoWeb/issues"
+  },
+  "homepage": "https://github.com/BrunoAggazzani/CuoraNeoWeb#readme",
+  "description": ""
 }
