--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http": "0.0.1-security",
     "i18n": "^0.15.0",
     "morgan": "^1.10.0",
+    "mssql": "^9.0.1",
     "pg": "^8.7.1",
     "puppeteer": "^13.5.1"
   },
