--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "helmet": "^5.1.0",
     "http": "0.0.1-security",
     "i18n": "^0.15.0",
+    "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "mssql": "^9.0.1",
     "pg": "^8.7.1",
